# nosql

./: .dockerignore  Dockerfile  pyproject.toml  readme.md
configs/: default.yml
docs/: LARGE_LANGUAGE_MODELS.md  MODEL_DISTILATION.md  MODEL_DISTILLATION.md
docs/.obsidian/: workspace.json
scripts/: build_spider.py  check_spider_sql.py  inspect_spider.py  validate_spider.py
src/nosql/: __init__.py  cli.py  config.py
src/nosql/spider/: __init__.py  build.py  check_sql.py  inspect.py  paths.py  sft.py  validate.py
