[project]
name = "nosql"
version = "0.1.0"
description = "tiny text-to-sql LLM"
readme = "readme.md"
authors = [
    { name = "kata", email = "contact@k4ta.dev" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
nosql = "nosql.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

