[project]
name = "nosql"
version = "0.1.0"
description = "smol text-to-sql llm"
readme = "README.md"
authors = [
    { name = "k4tastropa", email = "contact@k4ta.dev" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nosql = "nosql:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
